[project]
name = "ogdf-python-stubs"
version = "0.1.0-dev"
description = "Stubs for the OGDF python bindings"
authors = [
  { name = "Simon D. Fink", email = "finksim@fim.uni-passau.de" },
]
requires-python = ">=3.7"
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://ogdf.github.io"
repository = "https://github.com/N-Coder/ogdf-python"
documentation = "https://ogdf-python.readthedocs.io"
keywords = ["ogdf", "graph", "network", "drawing", "algorithm"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Unix',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

dependencies = [
    "ogdf-python>=0.3.0",
    "ogdf-wheel==2023.9",
]

[project.optional-dependencies]
dev = [
    "lxml",
    "sh",
    "black",
    "mypy"
]

[tool.hatch.build.targets.wheel]
packages = ["/stubs/ogdf_python-stubs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
